# examples-sandbox

./: .readthedocs.yml  README.md  addheader.yml  copy_files.py  edit_tags.py  map.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
idaes_examples/: browse.py  build.py  common.py  util.py
idaes_examples/nb/: _config.yml  _toc.yml  conftest.py  test_notebooks.py
idaes_examples/nb/_dev/: notebook_tags_example_src.ipynb
idaes_examples/nb/custom_props/: index.md  reaction_property_example.py,cover  thermophysical_property_example.py,cover
idaes_examples/nb/custom_units/: index.md
idaes_examples/nb/dae/: index.md  petsc_chem_example.ipynb  petsc_chem_example_test.ipynb  petsc_chem_src.ipynb  petsc_pid_example.ipynb  petsc_pid_example_doc.ipynb  petsc_pid_example_test.ipynb  petsc_pid_src.ipynb
idaes_examples/nb/data_recon/: index.md
idaes_examples/nb/data_reconciliation/: boiler_flowsheet_recon_src.ipynb  econ_parmest_src.ipynb  econ_recon_src.ipynb
idaes_examples/nb/flowsheets/: hda_flowsheet_with_costing_src.ipynb  hda_flowsheet_with_distillation_src.ipynb  hda_flowsheets_for_costing_notebook.py  methanol_flowsheet.py  methanol_flowsheet_w_recycle.py  methanol_synthesis_src.ipynb  test1_src.ipynb
idaes_examples/nb/hda/: HDA_flowsheet.ipynb  HDA_flowsheet_doc.ipynb  HDA_flowsheet_exercise.ipynb  HDA_flowsheet_solution.ipynb  HDA_flowsheet_src.ipynb  HDA_flowsheet_test.ipynb  HDA_flowsheet_with_distillation_doc.ipynb  HDA_flowsheet_with_distillation_exercise.ipynb  HDA_flowsheet_with_distillation_solution.ipynb  HDA_flowsheet_with_distillation_src.ipynb  HDA_flowsheet_with_distillation_test.ipynb  Hydrodealkylation.json  index.md  solver_captured.py  test1_src.ipynb
idaes_examples/nb/matopt/: bifunctional_surface_design_src.ipynb  bimetallic_nanocluster_design_src.ipynb  metal_oxide_bulk_design_src.ipynb  monometallic_nanocluster_design_src.ipynb  nanowire_design_src.ipynb  surface_design_src.ipynb
idaes_examples/nb/param_est/: dmf_1_for_parameter_estimation_nrtl_using_unit_model_src.ipynb  dmf_2_flash_unit_model_with_nrtl_src.ipynb  parameter_estimation_nrtl_using_state_block_src.ipynb  parameter_estimation_nrtl_using_unit_model_src.ipynb
idaes_examples/nb/parmest/: index.md  parameter_estimation_NRTL_using_state_block.ipynb  parameter_estimation_NRTL_using_state_block_doc.ipynb  parameter_estimation_NRTL_using_state_block_exercise.ipynb  parameter_estimation_NRTL_using_state_block_solution.ipynb  parameter_estimation_NRTL_using_state_block_test.ipynb  parameter_estimation_NRTL_using_unit_model_exercise.ipynb  parameter_estimation_NRTL_using_unit_model_solution.ipynb  parameter_estimation_NRTL_using_unit_model_test.ipynb
idaes_examples/nb/pecos/: data_quality_control_src.ipynb
idaes_examples/nb/surrogates/: index.md
idaes_examples/nb/tools/: data_management_framework_src.ipynb  degeneracy_hunter_src.ipynb
idaes_examples/nb/tut/: HDA_solved.json  (+7 more)
scripts/: README.md  generate_toc.py  map.yml
src/: _toc.yml
src/dae/: petsc_chem_example_doc.ipynb
src/hda/: HDA_flowsheet_doc.ipynb  HDA_flowsheet_exercise.ipynb  HDA_flowsheet_test.ipynb  HDA_flowsheet_with_distillation_exercise.ipynb  HDA_flowsheet_with_distillation_solution.ipynb  HDA_flowsheet_with_distillation_test.ipynb  index.md
src/parmest/: parameter_estimation_NRTL_using_state_block_exercise.ipynb  parameter_estimation_NRTL_using_state_block_solution.ipynb  parameter_estimation_NRTL_using_state_block_test.ipynb  parameter_estimation_NRTL_using_unit_model_doc.ipynb  parameter_estimation_NRTL_using_unit_model_test.ipynb
(+47 files in other folders)
