[build-system]
requires = ["setuptools ~= 63.0"]

[tool.pytest.ini_options]
minversion = "7.0"
# The '--ignore-glob' args make sure only notebooks
# ending in _test.ipynb are run
addopts = """\
     -n=auto \
     --nbmake \
     --nbmake-timeout=600 \
     --ignore-glob=*_doc.ipynb \
     --ignore-glob=*_exercise.ipynb \
     --ignore-glob=*_solution.ipynb \
     --ignore-glob=*_src.ipynb \
     --ignore-glob=*_usr.ipynb \
     --report-log=pytest-report.log\
"""
testpaths = [
    "idaes_examples/nb"
]
